# packages/shared/pkg/http/edge/types.gen.go
@@ -45,8 +45,10 @@ const (
 
 // Defines values for SandboxLogEventType.
 const (
-	Stderr SandboxLogEventType = "stderr"
-	Stdout SandboxLogEventType = "stdout"
+	ProcessEnd   SandboxLogEventType = "process_end"
+	ProcessStart SandboxLogEventType = "process_start"
+	Stderr       SandboxLogEventType = "stderr"
+	Stdout       SandboxLogEventType = "stdout"
 )
 
 // Defines values for V1TemplateBuildLogsParamsDirection.
@@ -177,7 +179,7 @@ type SandboxLog struct {
 
 // SandboxLogEntry defines model for SandboxLogEntry.
 type SandboxLogEntry struct {
-	// EventType Type of sandbox log event (stdout or stderr)
+	// EventType Type of sandbox log event
 	EventType SandboxLogEventType `json:"eventType"`
 	Fields    map[string]string   `json:"fields"`
 
@@ -188,7 +190,7 @@ type SandboxLogEntry struct {
 	Timestamp time.Time `json:"timestamp"`
 }
 
-// SandboxLogEventType Type of sandbox log event (stdout or stderr)
+// SandboxLogEventType Type of sandbox log event
 type SandboxLogEventType string
 
 // SandboxLogsResponse defines model for SandboxLogsResponse.
